<resources>
    <string name="app_name">Teach Writing !</string>
    <string name="action_settings">Settings</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="record">record</string>
    <string name="ok">ok</string>
</resources>
